--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,12 +11,41 @@
     <%= csrf_meta_tags %>
   </head>
   <body>
-    <header>
+    <!-- <header>
       <%= render 'layouts/navigation' %>
     </header>
     <main role="main">
        <%= render 'layouts/messages' %>
        <%= yield %>
-    </main>
+    </main> -->
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#topWrap">
+            <span class="fa-stack fa-lg">
+              <i class="fa fa-circle fa-stack-2x"></i>
+              <i class="fa fa-home fa-stack-1x fa-inverse"></i>
+            </span>
+            Nyumba<span class="title">Kumi</span>
+          </a>
+        </div>
+        <div class="collapse navbar-collapse appiNav">
+          <ul class="nav navbar-nav">
+            <li><a href="#featureWrap">Features</a></li>
+            <li><a href="#productWrap">The App</a></li>
+            <li><a href="#pricingWrap">Pricing</a></li>
+            <li><a href="#testimonialsWrap">Testimonials</a></li>
+            <li><a href="#contactWrap">Contact Us</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </div>
+    <%= yield %>
   </body>
 </html>
