--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,241 @@
-<%= map(:center => {
-  :latlng => [51.52238797921441, -0.08366235665359283],
-  :zoom => 18
-}) %>
-hello
+<div id="topWrap" class="jumbotron">
+			<div class="container">
+				<div class="col-md-6 col-md-push-6 jumboText">
+					<h1>Nyumba Kumi Mobile App</h1>
+					<h2>Digitizing the Nyumba Kumi initiative.</h2>
+					<!-- <a class="btn btn-lg btn-success actionBtn" href="#"><i class="fa fa-mobile fa-4x pull-left"></i><span class="line1">Available on the</span><br/><span class="line2">App Store</span></a> -->
+					<img src="assets/google_play.png">
+				</div>
+				<div class="col-md-6 col-md-pull-6 hidden-xs">
+					<div class="mobile">
+						<div class="mobileSlider">
+							<ul class="slides">
+								<li>
+									<img src="assets/splash.jpg"/>
+								</li>
+								<li>
+									<img src="assets/main-menu.jpg"/>
+								</li>
+								<li>
+									<img src="assets/profile.jpg"/>
+								</li>
+								<li>
+									<img src="assets/panic-menu.jpg"/>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				
+			</div>
+			</div>
+
+	<div id="featureWrap">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-4 text-center feature">
+					<i class="fa fa-lock icon"></i>
+					<h3>Home Safe</h3>
+					<p>
+					You will never feel safer as you will be up to date with the latest security alerts in your neighborhood.
+					Security services will be just a tap away whenever you are in need.
+					</p>
+				</div>
+				<div class="col-sm-4 text-center feature">
+					<i class="fa fa-ambulance icon"></i>
+					<h3>Health Services</h3>
+					<p>
+					Ever got caught up in a health emergency situation and thought "Damn! I wish I could get some medical attention quick!"? Well, now you can!	We have health services companies signed up with us so, we have got you covered.
+					</p>
+				</div>
+				<div class="col-sm-4 text-center feature">
+					<i class="fa fa-group icon"></i>
+					<h3>Groups</h3>
+					<p>
+					As the old saying goes, there is safety in numbers. And, with the NyumbaKumi app, you will never feel lonely as you will be up to date with your neighbors and the goings-on in the neighborhood.
+					</p>
+				</div>
+			</div>
+		</div>
+	</div> <!-- /featureWrap -->
+	
+	<div id="productWrap" class="altWrap">
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-12">
+					<h2 class="sectionTitle">Modern &amp; clean landing page theme</h2>
+					<h3 class="sectionTitle">Lorem ipsum dolizzle sit tellivizzle, boom shackalack adipiscing elit. Nullam mofo velizzle, sure cool.</h3>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-5 col-md-offset-1">
+					<div class="imgWrap">
+						<img class="img-responsive" src="assets/tablet.png"/>
+					</div>
+				</div>
+				<div class="col-md-5">
+					<div class="productFeatures clearfix">
+						<div class="col-xs-2 icon">
+							<span class="fa-stack fa-lg">
+							<i class="fa fa-circle fa-stack-2x"></i>
+							<i class="fa fa-trophy fa-stack-1x fa-inverse"></i>
+							</span>
+						</div>
+						<div class="col-xs-10">
+							<h3>Amazing features</h3>
+							<p>Vestibulum tellivizzle i saw beyonces tizzles and my pizzle went crizzle primis gangsta faucibus fizzle luctizzle izzle stuff posuere mammasay mammasa mamma oo sa Daahng dawg.</p>
+						</div>
+						<div class="col-xs-2 icon">
+							<span class="fa-stack fa-lg">
+							<i class="fa fa-circle fa-stack-2x"></i>
+							<i class="fa fa-cog fa-stack-1x fa-inverse"></i>
+							</span>
+						</div>
+						<div class="col-xs-10">
+							<h3>Fully customizeable</h3>
+							<p>Vestibulum tellivizzle i saw beyonces tizzles and my pizzle went crizzle primis gangsta faucibus fizzle luctizzle izzle stuff posuere mammasay mammasa mamma oo sa Daahng dawg.</p>
+						</div>
+						<div class="col-xs-2 icon">
+							<span class="fa-stack fa-lg">
+							<i class="fa fa-circle fa-stack-2x"></i>
+							<i class="fa fa-bars fa-stack-1x fa-inverse"></i>
+							</span>
+						</div>
+						<div class="col-xs-10">
+							<h3>Clean &amp; functional layout</h3>
+							<p>Vestibulum tellivizzle i saw beyonces tizzles and my pizzle went crizzle primis gangsta faucibus fizzle luctizzle izzle stuff posuere mammasay mammasa mamma oo sa Daahng dawg.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div> <!-- /productWrap -->
+	
+	<div id="pricingWrap">
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-12">
+					<h2 class="sectionTitle">Ready to get started?</h2>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-4">
+					<ul class="priceTable">
+						<li class="title">Basic Plan</li>
+						<li class="description">For basic people</li>
+						<li class="price">$9.99</li>
+						<ul class="features">
+							<li>Phasellizzle brizzle</li>
+							<li>Crizzle aliquizzle</li>
+							<li>And a lot more gizzle</li>
+						</ul>
+						<li class="call">
+							<a class="btn btn-success btn-lg" href="#">Buy Now</a>
+						</li>
+					</ul>
+				</div>
+				<div class="col-sm-4">
+					<ul class="priceTable alt">
+						<li class="title">Super Plan</li>
+						<li class="description">For super people</li>
+						<li class="price">$19.99</li>
+						<ul class="features">
+							<li>Phasellizzle brizzle</li>
+							<li>Crizzle aliquizzle</li>
+							<li>And a lot more gizzle</li>
+						</ul>
+						<li class="call">
+							<a class="btn btn-success btn-lg" href="#">Buy Now</a>
+						</li>
+					</ul>
+				</div>
+				<div class="col-sm-4">
+					<ul class="priceTable">
+						<li class="title">Awesome Plan</li>
+						<li class="description">For awesome people</li>
+						<li class="price">$29.99</li>
+						<ul class="features">
+							<li>Phasellizzle brizzle</li>
+							<li>Crizzle aliquizzle</li>
+							<li>And a lot more gizzle</li>
+						</ul>
+						<li class="call">
+							<a class="btn btn-success btn-lg" href="#">Buy Now</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div> <!-- /pricingWrap -->
+	
+	<div id="testimonialsWrap" class="altWrap">
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-12">
+					<h2 class="sectionTitle">What people say</h2>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-12">
+					<div class="flexslider">
+						<ul class="slides">
+							<li>
+								<div class="quote">"Etizzle laoreet doggy dope nisl. Dang pulvinizzle, ipsizzle dawg."</div>
+								<div class="author">Martin Nizzle</div>
+							</li>
+							<li>
+								<div class="quote">"Crazy tellus urna, yo mamma check out this, eleifend you son of a bizzle."</div>
+								<div class="author">Jennifer Aliquizzle</div>
+							</li>
+							<li>
+								<div class="quote">"Praesent i saw beyonces tizzles and my pizzle went crizzle turpizzle."</div>
+								<div class="author">William Lorizzle</div>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div> <!-- /testimonialsWrap -->
+	
+	<div id="contactWrap">
+		<div class="overlay">
+			<div class="container">
+				<div class="row">
+						<div class="col-xs-12">
+						<h2 class="sectionTitle">Contact us</h2>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-xs-12 text-center">
+						<div class="blurb">
+						Want to chat? Send us a message. We'd love to hear from you!
+						</div>
+					</div>
+				</div>
+					<div class="row">
+						<div class="col-sm-4 col-sm-offset-2">
+							<div class="inputContainer">
+							<label>Name</label>
+								<input type="text" name="contactName" id="contactName" value="" class="form-control" autocomplete="off" />
+							</div>
+						</div>
+						<div class="col-sm-4">
+							<div class="inputContainer">
+							<label class="screen-reader-text">Email</label>
+								<input type="text" name="email" id="email" value="" class="form-control" autocomplete="off"  />
+							</div>
+						</div>
+						<div class="col-sm-8 col-sm-offset-2">
+							<div class="inputContainer">
+							<label class="screen-reader-text">Message</label>
+								<textarea name="comments" id="commentsText" class="form-control" autocomplete="off"></textarea>
+							</div>
+						</div>
+						<div class="col-sm-8 col-sm-offset-2">
+							<button name="submit" type="button" class="btn btn-primary btn-lg">Send</button>
+						</div>
+					</div>
+			</div>
+		</div>
+	</div> <!-- /contactWrap -->
