--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,12 +10,13 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- //= depend_on_asset "layers.png"
- //= depend_on_asset "layers-2x.png"
+ *= depend_on_asset "layers.png"
+ *= depend_on_asset "layers-2x.png"
  *= require_tree .
  *= require leaflet
  *= require bootstrap.min
  *= require flexslider
  *= require custom
+ *= require font-awesome
  *= require_self
  */
