--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,11 +1,28 @@
-<%# navigation styled for Zurb Foundation 5 %>
-<nav class="top-bar" data-topbar>
-  <ul class="title-area">
-    <li class="name"><%= link_to 'Home', root_path %></li>
-    <li class="toggle-topbar menu-icon"><a href="#">Menu</a></li>
-  </ul>
-  <div class="top-bar-section">
-    <ul>
-    </ul>
+<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#topWrap">
+        <span class="fa-stack fa-lg">
+          <i class="fa fa-circle fa-stack-2x"></i>
+          <i class="fa fa-home fa-stack-1x fa-inverse"></i>
+        </span>
+        Nyumba<span class="title">Kumi</span>
+      </a>
+    </div>
+    <div class="collapse navbar-collapse appiNav">
+      <ul class="nav navbar-nav">
+        <li><a href="#featureWrap">Features</a></li>
+        <li><a href="#productWrap">The App</a></li>
+        <li><a href="#pricingWrap">Pricing</a></li>
+        <li><a href="#testimonialsWrap">Testimonials</a></li>
+        <li><a href="#contactWrap">Contact Us</a></li>
+      </ul>
+    </div><!--/.nav-collapse -->
   </div>
-</nav>
+</div>
