changed the app name

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <div id="topWrap" class="jumbotron">
 			<div class="container">
 				<div class="col-md-6 col-md-push-6 jumboText">
-					<h1>Nyumba Kumi Mobile App</h1>
+					<h1>Ujirani Mobile App</h1>
 					<h2>Digitizing the Nyumba Kumi initiative.</h2>
 					<!-- <a class="btn btn-lg btn-success actionBtn" href="#"><i class="fa fa-mobile fa-4x pull-left"></i><span class="line1">Available on the</span><br/><span class="line2">App Store</span></a> -->
 					<img src="assets/google_play.png">
@@ -37,7 +37,7 @@
 					<i class="fa fa-lock icon"></i>
 					<h3>Home Safe</h3>
 					<p>
-					You will never feel safer as you will be up to date with the latest security alerts in your neighborhood.
+					You will forever feel safer as you will be up to date with the latest security alerts in your neighborhood.
 					Security services will be just a tap away whenever you are in need.
 					</p>
 				</div>
@@ -52,7 +52,7 @@
 					<i class="fa fa-group icon"></i>
 					<h3>Groups</h3>
 					<p>
-					As the old saying goes, there is safety in numbers. And, with the NyumbaKumi app, you will never feel lonely as you will be up to date with your neighbors and the goings-on in the neighborhood.
+					As the old saying goes, there is safety in numbers. And, with the Ujirani app, you will never feel lonely as you will be up to date with your neighbors and the goings-on in the neighborhood.
 					</p>
 				</div>
 			</div>
