--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -12,7 +12,7 @@
           <i class="fa fa-circle fa-stack-2x"></i>
           <i class="fa fa-home fa-stack-1x fa-inverse"></i>
         </span>
-        Nyumba<span class="title">Kumi</span>
+        Ujirani<span class="title"></span>
       </a>
     </div>
     <div class="collapse navbar-collapse appiNav">
