changed the footer

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -63,7 +63,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-12">
-					<h2 class="sectionTitle">Modern &amp; clean landing page theme</h2>
+					<h2 class="sectionTitle">Simple. Social. Secure</h2>
 					<h3 class="sectionTitle">Lorem ipsum dolizzle sit tellivizzle, boom shackalack adipiscing elit. Nullam mofo velizzle, sure cool.</h3>
 				</div>
 			</div>
