--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,15 +2,15 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-12 text-center">
-				<p>Copyright &copy; 2014 AppBay - Responsive App Landing Page Template. Built by <a href="http://bootstrapbay.com">BootstrapBay</a>. All Rights Reserved</p>
+				<p>Copyright &copy; 2014 All Rights Reserved</p>
 				<p class="social">
-					<a href="https://www.facebook.com/bootstrapbay">
+					<a href="https://www.facebook.com/pages/Ujirani-app/1518675521712883">
 						<span class="fa-stack fa-lg">
 							<i class="fa fa-circle fa-stack-2x"></i>
 							<i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
 						</span>
 					</a>
-					<a href="https://twitter.com/bootstrapbay">
+					<a href="https://twitter.com/Ujiraniapp">
 						<span class="fa-stack fa-lg">
 							<i class="fa fa-circle fa-stack-2x"></i>
 							<i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
