--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -120,7 +120,8 @@
 			</div>
 			<div class="row">
 				<div class="col-sm-4">
-					<ul class="priceTable">
+					<img src="assets/menu.png">
+					<!-- <ul class="priceTable">
 						<li class="title">Basic Plan</li>
 						<li class="description">For basic people</li>
 						<li class="price">$9.99</li>
@@ -132,10 +133,11 @@
 						<li class="call">
 							<a class="btn btn-success btn-lg" href="#">Buy Now</a>
 						</li>
-					</ul>
+					</ul> -->
 				</div>
 				<div class="col-sm-4">
-					<ul class="priceTable alt">
+					<img src="assets/compose.png">
+					<!-- <ul class="priceTable alt">
 						<li class="title">Super Plan</li>
 						<li class="description">For super people</li>
 						<li class="price">$19.99</li>
@@ -147,10 +149,11 @@
 						<li class="call">
 							<a class="btn btn-success btn-lg" href="#">Buy Now</a>
 						</li>
-					</ul>
+					</ul> -->
 				</div>
 				<div class="col-sm-4">
-					<ul class="priceTable">
+					<img src="assetsdashboard.png">
+					<!-- <ul class="priceTable">
 						<li class="title">Awesome Plan</li>
 						<li class="description">For awesome people</li>
 						<li class="price">$29.99</li>
@@ -162,7 +165,65 @@
 						<li class="call">
 							<a class="btn btn-success btn-lg" href="#">Buy Now</a>
 						</li>
-					</ul>
+					</ul> -->
+				</div>
+			</div>
+		</div>
+	</div> <!-- /pricingWrap --><div id="pricingWrap">
+		<div class="container"><!-- 
+			<div class="row">
+				<div class="col-xs-12">
+					<h2 class="sectionTitle">Ready to get started?</h2>
+				</div>
+			</div> -->
+			<div class="row">
+				<div class="col-sm-4">
+					<img src="assets/panic.png">
+					<!-- <ul class="priceTable">
+						<li class="title">Basic Plan</li>
+						<li class="description">For basic people</li>
+						<li class="price">$9.99</li>
+						<ul class="features">
+							<li>Phasellizzle brizzle</li>
+							<li>Crizzle aliquizzle</li>
+							<li>And a lot more gizzle</li>
+						</ul>
+						<li class="call">
+							<a class="btn btn-success btn-lg" href="#">Buy Now</a>
+						</li>
+					</ul> -->
+				</div>
+				<div class="col-sm-4">
+					<img src="assets/calender.png">
+					<!-- <ul class="priceTable alt">
+						<li class="title">Super Plan</li>
+						<li class="description">For super people</li>
+						<li class="price">$19.99</li>
+						<ul class="features">
+							<li>Phasellizzle brizzle</li>
+							<li>Crizzle aliquizzle</li>
+							<li>And a lot more gizzle</li>
+						</ul>
+						<li class="call">
+							<a class="btn btn-success btn-lg" href="#">Buy Now</a>
+						</li>
+					</ul> -->
+				</div>
+				<div class="col-sm-4">
+					<img src="assetsdashboard.png">
+					<!-- <ul class="priceTable">
+						<li class="title">Awesome Plan</li>
+						<li class="description">For awesome people</li>
+						<li class="price">$29.99</li>
+						<ul class="features">
+							<li>Phasellizzle brizzle</li>
+							<li>Crizzle aliquizzle</li>
+							<li>And a lot more gizzle</li>
+						</ul>
+						<li class="call">
+							<a class="btn btn-success btn-lg" href="#">Buy Now</a>
+						</li>
+					</ul> -->
 				</div>
 			</div>
 		</div>
