changed contact us

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -115,7 +115,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-12">
-					<h2 class="sectionTitle">Ready to get started?</h2>
+					<h2 class="sectionTitle">Amaizing Design!</h2>
 				</div>
 			</div>
 			<div class="row">
@@ -264,7 +264,7 @@
 			<div class="container">
 				<div class="row">
 						<div class="col-xs-12">
-						<h2 class="sectionTitle">Contact us</h2>
+						<h2 class="sectionTitle">Give us a shout out!</h2>
 					</div>
 				</div>
 				<div class="row">
