removed the old images

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -64,7 +64,7 @@
 			<div class="row">
 				<div class="col-xs-12">
 					<h2 class="sectionTitle">Simple. Social. Secure</h2>
-					<h3 class="sectionTitle">Lorem ipsum dolizzle sit tellivizzle, boom shackalack adipiscing elit. Nullam mofo velizzle, sure cool.</h3>
+					<h3 class="sectionTitle">Navigating through the app is easy and simple!!</h3>
 				</div>
 			</div>
 			<div class="row">
