--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -19,7 +19,7 @@
       <ul class="nav navbar-nav">
         <li><a href="#featureWrap">Features</a></li>
         <li><a href="#productWrap">The App</a></li>
-        <li><a href="#pricingWrap">Pricing</a></li>
+        <li><a href="#pricingWrap">Design</a></li>
         <li><a href="#testimonialsWrap">Testimonials</a></li>
         <li><a href="#contactWrap">Contact Us</a></li>
       </ul>
