--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -70,7 +70,7 @@
 			<div class="row">
 				<div class="col-md-5 col-md-offset-1">
 					<div class="imgWrap">
-						<img class="img-responsive" src="assets/tablet.png"/>
+						<!-- <img class="img-responsive" src="assets/tablet.png"/> -->
 					</div>
 				</div>
 				<div class="col-md-5">
