Experimenting with Google Maps, changed small thing in panic menu actions

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,4 +1,30 @@
-<div style='width: 800px;'>
+<!DOCTYPE html>
+<html>
+  <head>
+    <style type="text/css">
+      html, body, #map-canvas { height: 100%; margin: 0; padding: 0;}
+    </style>
+    <script type="text/javascript"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB4u6EYHG6OxEBHORkBbKXUm7OQBySIxr8">
+    </script>
+    <script type="text/javascript">
+      function initialize() {
+        var mapOptions = {
+          center: { lat: -1.288049, lng: 36.841828},
+          zoom: 12
+        };
+        var map = new google.maps.Map(document.getElementById('map-canvas'),
+            mapOptions);
+      }
+      google.maps.event.addDomListener(window, 'load', initialize);
+    </script>
+  </head>
+  <body>
+<div id="map-canvas"></div>
+  </body>
+</html>
+
+<!-- <div style='width: 800px;'>
 <p>hi</p>
   <div id="map" style='width: 1450px; height: 700px;'></div>
 </div>
@@ -170,4 +196,4 @@
 // 	}
 
 // 	function onMapMove(e) { askForPlots(); }
-// </script>
+// </script> -->
