--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -16,31 +16,16 @@
         var myLatlng = new google.maps.LatLng(-1.2137278, 36.8928517);
         var map = new google.maps.Map(document.getElementById('map-canvas'),
             mapOptions);
-
-        // var incidents = [
-        // 	["Loc 1", -1.2137278, 36.8928517],
-        // 	["Loc 2", -1.2136289, 36.8929235],
-        // 	["Loc 3", 2134353435,123243642],
-        // 	["Loc 4", -1.2118471, 36.8968742]
-        // ];
-
-        // for (var i = 0; i < incidents.length; i++) {
-	       //  var incident = incidents[i];
-	       //  var myLatLng = new google.maps.LatLng(incident[1], incident[2]);
-	       //  var marker = new google.maps.Marker({
-        //     position: myLatLng,
-        //     map: map,
-        //     // icon: image,
-        //     // shape: shape,
-        //     title: incident[0],
-        //     // zIndex: incident[3]
-        // });
-
-        var marker = new google.maps.Marker({
-            position: myLatlng,
-            map: map,
-            animation: google.maps.Animation.DROP,
-            title:"Hello World!"
+        $.get('/incidents.json', function(data) {
+        	var marker = new google.maps.Marker({
+        		coords = incident.location;
+        		lat = parseFloat(coords.substr(0, coords.indexOf(', ')))
+        		lng = parseFloat(coords.substr(coords.indexOf(', ')+2, coords.length))
+        	    position: new google.maps.LatLng(lat, lng),
+        	    map: map,
+        	    animation: google.maps.Animation.DROP,
+        	    title:"Hello World!"
+        	});
         });
         google.maps.event.addListener(marker, 'click', toggleBounce);
       }
