A lot of changes: UI changes, dashboard, map...

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,23 +4,23 @@
 					<h1>Ujirani Mobile App</h1>
 					<h2>Digitizing the Nyumba Kumi initiative.</h2>
 					<!-- <a class="btn btn-lg btn-success actionBtn" href="#"><i class="fa fa-mobile fa-4x pull-left"></i><span class="line1">Available on the</span><br/><span class="line2">App Store</span></a> -->
-					<img src="assets/google_play.png">
+					<a href="https://play.google.com/store/apps/details?id=com.app.nyumbakumi"><img src="assets/google_play.png"></a>
 				</div>
 				<div class="col-md-6 col-md-pull-6 hidden-xs">
 					<div class="mobile">
 						<div class="mobileSlider">
 							<ul class="slides">
 								<li>
-									<img src="assets/splash.jpg"/>
+									<img src="assets/dashboard.png"/>
 								</li>
 								<li>
-									<img src="assets/main-menu.jpg"/>
+									<img src="assets/menu.png"/>
 								</li>
 								<li>
-									<img src="assets/profile.jpg"/>
+									<img src="assets/create_group.png"/>
 								</li>
 								<li>
-									<img src="assets/panic-menu.jpg"/>
+									<img src="assets/panic.png"/>
 								</li>
 							</ul>
 						</div>
@@ -32,6 +32,7 @@
 
 	<div id="featureWrap">
 		<div class="container">
+			<h2 class="sectionTitle">Simple. Social. Secure</h2>
 			<div class="row">
 				<div class="col-sm-4 text-center feature">
 					<i class="fa fa-lock icon"></i>
@@ -59,7 +60,7 @@
 		</div>
 	</div> <!-- /featureWrap -->
 	
-	<div id="productWrap" class="altWrap">
+	<!-- <div id="productWrap" class="altWrap">
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-12">
@@ -70,7 +71,7 @@
 			<div class="row">
 				<div class="col-md-5 col-md-offset-1">
 					<div class="imgWrap">
-						<!-- <img class="img-responsive" src="assets/tablet.png"/> -->
+						<img class="img-responsive" src="assets/tablet.png"/>
 					</div>
 				</div>
 				<div class="col-md-5">
@@ -109,13 +110,13 @@
 				</div>
 			</div>
 		</div>
-	</div> <!-- /productWrap -->
+	</div> --> <!-- /productWrap -->
 	
-	<div id="pricingWrap">
+	<div id="productWrap">
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-12">
-					<h2 class="sectionTitle">Amaizing Design!</h2>
+					<h2 class="sectionTitle">Amazing Design!</h2>
 				</div>
 			</div>
 			<div class="row">
@@ -229,7 +230,7 @@
 		</div>
 	</div> <!-- /pricingWrap -->
 	
-	<div id="testimonialsWrap" class="altWrap">
+	<!-- <div id="testimonialsWrap" class="altWrap">
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-12">
@@ -257,7 +258,7 @@
 				</div>
 			</div>
 		</div>
-	</div> <!-- /testimonialsWrap -->
+	</div> --> <!-- /testimonialsWrap -->
 	
 	<div id="contactWrap">
 		<div class="overlay">
