--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -16,13 +16,13 @@
 							<i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
 						</span>
 					</a>
-					<a href="https://plus.google.com/+BootstrapbayThemes">
+					<a href="#">
 						<span class="fa-stack fa-lg">
 							<i class="fa fa-circle fa-stack-2x"></i>
 							<i class="fa fa-google-plus fa-stack-1x fa-inverse"></i>
 						</span>
 					</a>
-					<a href="http://www.youtube.com/user/bootstrapbayofficial">
+					<a href="#">
 						<span class="fa-stack fa-lg">
 							<i class="fa fa-circle fa-stack-2x"></i>
 							<i class="fa fa-youtube fa-stack-1x fa-inverse"></i>
