--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -4,10 +4,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= content_for?(:title) ? yield(:title) : "Nyumba Kumi" %></title>
     <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Nyumba Kumi" %>">
-    
+    <%= stylesheet_link_tag 'dashboard', media: 'all', 'data-turbolinks-track' => false %>
+    <%= javascript_include_tag 'dashboard', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
   </head>
   <body>
-    <%= yield %>
+  	<!-- <div class="ui menu">
+  	  <a class="item">
+  	    Ujirani
+  	  </a>
+  	  <div class="right menu">
+  	    <div class="item">
+  	      <div class="ui icon input">
+  	        <input type="text" placeholder="Search...">
+  	        <i class="search link icon"></i>
+  	      </div>
+  	    </div>
+  	    <div class="ui dropdown item">
+  	      <i class="dropdown icon"></i>
+  	      Language
+  	      <div class="menu">
+  	        <a class="item">English</a>
+  	        <a class="item">Russian</a>
+  	        <a class="item">Spanish</a>
+  	      </div>
+  	    </div>
+  	  </div>
+  	</div> -->
+  	<%= render 'top_nav' %>
+  	<div class="bg"></div>
+  	<div class="ui grid">
+  	<div class="six wide column">
+	  	<%= render 'side_nav' %>
+  	</div>
+  	<div class="ten wide column">
+    	<%= yield %>
+    </div>
+    </div>
   </body>
 </html>
