created new flow from sign up througn adding company and branch to viewing map

--- a/app/views/branches/_form.html.erb
+++ b/app/views/branches/_form.html.erb
@@ -1,3 +1,4 @@
+<div class="authform">
 <%= form_for(@branch) do |f| %>
   <% if @branch.errors.any? %>
     <div id="error_explanation">
@@ -13,7 +14,7 @@
 
   <div class="field">
     <%= f.label :company_id %><br>
-    <%= f.text_field :company_id %>
+    <%= f.select :company_id, Company.all.collect {|company| [ company.name, company.id] }, { include_blank: 'Select Company' } %>
   </div>
   <div class="field">
     <%= f.label :phone_number %><br>
@@ -28,6 +29,7 @@
     <%= f.text_field :longitude %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit 'Sign up', :class => 'button right' %>
   </div>
 <% end %>
+</div>
