add links to company#new and branch#new to nav

--- a/app/views/branches/_form.html.erb
+++ b/app/views/branches/_form.html.erb
@@ -29,7 +29,7 @@
     <%= f.text_field :longitude %>
   </div>
   <div class="actions">
-    <%= f.submit 'Sign up', :class => 'button right' %>
+    <%= f.submit 'Add Branch', :class => 'button right' %>
   </div>
 <% end %>
 </div>
