--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -29,7 +29,7 @@
     <%= f.text_field :phone_number %>
   </div>
   <div class="actions">
-    <%= f.submit 'Sign up', :class => 'button right' %>
+    <%= f.submit 'Add Company', :class => 'button right' %>
   </div>
 <% end %>
 </div>
