--- a/app/views/layouts/map.html.erb
+++ b/app/views/layouts/map.html.erb
@@ -15,13 +15,17 @@
     </script>
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
     <script type="text/javascript">
+    $(document).ready(function() {
+      // run the first time; all subsequent calls will take care of themselves
+      setTimeout(executeQuery, 5000);
+    });
       function initialize() {
         var mapOptions = {
           center: { lat: -1.288049, lng: 36.841828},
           zoom: 12
         };
         var myLatlng = new google.maps.LatLng(-1.2137278, 36.8928517);
-        var map = new google.maps.Map(document.getElementById('map-canvas'),
+        map = new google.maps.Map(document.getElementById('map-canvas'),
             mapOptions);
         var contentString = '<div id="content">'+
               '<div id="siteNotice">'+
@@ -67,7 +71,37 @@
           })
         });
       }
+
       google.maps.event.addDomListener(window, 'load', initialize);
+
+      function executeQuery() {
+        $.ajax({
+          url: 'company_incidents',
+          success: function(data) {
+            $.each(data, function(key, incident){
+              console.log(incident);
+              coords = incident.location;
+              console.log(coords)
+              lat = parseFloat(coords.substr(0, coords.indexOf(', ')))
+              lng = parseFloat(coords.substr(coords.indexOf(', ')+2, coords.length))
+
+              var marker = new google.maps.Marker({
+                  position: new google.maps.LatLng(lat, lng),
+                  map: map,
+                  animation: google.maps.Animation.DROP,
+                  title: incident.user_name + " (" + incident.user_phone + ")"
+              });
+              var infowindow = new google.maps.InfoWindow({
+                  content: incident.user_name
+              });
+              google.maps.event.addListener(marker, 'click', function() {
+                infowindow.open(map,marker);
+              });
+            })
+          }
+        });
+        setTimeout(executeQuery, 5000); // you could choose not to continue on failure...
+      }
     </script>
   </head>
   <body>
