--- a/app/views/layouts/map.html.erb
+++ b/app/views/layouts/map.html.erb
@@ -5,7 +5,7 @@
     <title><%= content_for?(:title) ? yield(:title) : "Nyumba Kumi" %></title>
     <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Nyumba Kumi" %>">
     <%= stylesheet_link_tag 'dashboard', media: 'all', 'data-turbolinks-track' => false %>
-    <%= javascript_include_tag 'dashboard', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag 'dashboard', 'data-turbolinks-track' => false %>
     <%= csrf_meta_tags %>
     <style type="text/css">
       html, body, #map-canvas { height: 100%; margin: 0; padding: 0;}
