link to home from map page

--- a/app/views/dashboard/_top_nav.html.erb
+++ b/app/views/dashboard/_top_nav.html.erb
@@ -1,5 +1,5 @@
 <div class="ui purple inverted menu">
-  <a class="active item">
+  <a class="active item" href="<%= root_path %>">
     <i class="home icon"></i> Home
   </a>
   <!-- <a class="item" href=<%= dashboard_index_path %>>
