--- a/app/views/layouts/map.html.erb
+++ b/app/views/layouts/map.html.erb
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= content_for?(:title) ? yield(:title) : "Nyumba Kumi" %></title>
-    <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Nyumba Kumi" %>">
+    <title><%= content_for?(:title) ? yield(:title) : "Ujirani App" %></title>
+    <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Ujirani App" %>">
     <%= stylesheet_link_tag 'dashboard', media: 'all', 'data-turbolinks-track' => false %>
     <%= javascript_include_tag 'dashboard', 'data-turbolinks-track' => false %>
     <%= csrf_meta_tags %>
