make contact form work with brace.io

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -276,27 +276,29 @@
 					</div>
 				</div>
 					<div class="row">
-						<div class="col-sm-4 col-sm-offset-2">
-							<div class="inputContainer">
-							<label>Name</label>
-								<input type="text" name="contactName" id="contactName" value="" class="form-control" autocomplete="off" />
+						<form action="//forms.brace.io/muadh24@gmail.com">
+							<div class="col-sm-4 col-sm-offset-2">
+								<div class="inputContainer">
+								<label>Name</label>
+									<input type="text" name="contactName" id="contactName" value="" class="form-control" autocomplete="off" />
+								</div>
 							</div>
-						</div>
-						<div class="col-sm-4">
-							<div class="inputContainer">
-							<label class="screen-reader-text">Email</label>
-								<input type="text" name="email" id="email" value="" class="form-control" autocomplete="off"  />
+							<div class="col-sm-4">
+								<div class="inputContainer">
+								<label class="screen-reader-text">Email</label>
+									<input type="text" name="email" id="email" value="" class="form-control" autocomplete="off"  />
+								</div>
 							</div>
-						</div>
-						<div class="col-sm-8 col-sm-offset-2">
-							<div class="inputContainer">
-							<label class="screen-reader-text">Message</label>
-								<textarea name="comments" id="commentsText" class="form-control" autocomplete="off"></textarea>
+							<div class="col-sm-8 col-sm-offset-2">
+								<div class="inputContainer">
+								<label class="screen-reader-text">Message</label>
+									<textarea name="comments" id="commentsText" class="form-control" autocomplete="off"></textarea>
+								</div>
 							</div>
-						</div>
-						<div class="col-sm-8 col-sm-offset-2">
-							<button name="submit" type="button" class="btn btn-primary btn-lg">Send</button>
-						</div>
+							<div class="col-sm-8 col-sm-offset-2">
+								<button name="submit" type="button" class="btn btn-primary btn-lg">Send</button>
+							</div>
+						</form>
 					</div>
 			</div>
 		</div>
